<resources>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="uploadImage">Image is Uploading</string>
    <string name="student_and_lecuture">Student and lecturer</string>
    <string name="visitor">Visitor</string>
    <string name="admin">Admin</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="news">News</string>
    <string name="rooms">Rooms</string>
    <string name="weather">Weather</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="info_about_aut">info about AUT</string>
    <string name="registration_form">registration form</string>
    <string name="sort_by">Sort by</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_sure">Are you sure to delete this post?</string>
    <string name="yes">Yes</string>
    <string name="delete_success">delete successfully</string>
    <string name="no">No</string>
    <string name="doctor">Doctor</string>
    <string name="upload">Upload</string>
    <string name="empty">Empty data, try again!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="browse">Browse</string>
    <string name="database_updated">Database Updated...</string>
    <string name="updating">Updating...</string>
    <string name="prev_img_del">previous image deleted</string>
    <string name="img_upl_success">"Image Uploaded Successfully "</string>
    <string name="select_image">Please Select Image</string>
    <string name="db_update">Database Updated...</string>
    <string name="aut1">Aqaba University of Technologyis the first private university established in southern Jordan, and it has an ambitious vision to be distinguished, attractive and the preferred choice for students from Jordan and the region. The university is located just fifteen kilometers south of the city of Aqaba on the hills overlooking the Gulf of Aqaba and on a piece of land extending over 500 acres.  The University admitted the first batch of students in the first semester of the academic year 2015/2016 at two faculties: the Faculty of Administrative and Financial Sciences and the Faculty of Information Technology. Under the guidance of the Board of Trustees\' Chairman, His Excellency Dr. Abdul Salam Majali , the University is working continuously on proposing new specializations that meet the required new employment needs in the region and which students seek to study from both inside Jordan and abroad. The university developed a number of disciplines in the academicyear of 2016/2017, including pharmacy, civil engineering and architecture, and is planning to come up in the near future with other disciplines, including medicine, interior design and graphic design.</string>
    <string name="aut2">Aqaba University of Technology was founded in response to the vision of His Majesty King Abdullah II of implementing a comprehensive development in the southern area of the Kingdom in general and in Aqaba Governorate in particular. The University has responded to the desire of Aqaba Special Economic Zone Authority to establish a private university. Accordingly, Aqaba University of Technology has been established to be the first private university in the south of the kingdom with an ambitious vision to be an attractive university and the preferred choice for students from Jordan and the Arab region.  Aqaba University of Technology is a Jordanian national institution established to serve the Kingdom and the region in general and Aqaba in particular. Aqaba University of Technology is one chain of the comprehensive development series in the south of the kingdom implemented under the auspices of His Majesty King Abdullah II. The presence of the university in the Aqaba Special Economic Zone is one of the leading factors for attracting students as it is located in an area with higher development rates of investment, population, tourism than the rest of other governorates of the Kingdom. By providing vicarious incentives and privileges, the Special Economic Zone Authority and its branches will help the university and other various investments to progress and develop.</string>
    <string name="aut3">Aqaba University of Technology is currently rendering a number of outstanding faculties that are of great importance to the Jordanian as well as the Arab labor market. These include the faculties of Pharmacy, Engineering, Administrative and Financial Sciences, Information Technology, and the Faculty of Arts and Sciences. The first batch of university students joined the university in the first semester of the academic year of 2016 / 2015 in five disciplines which are: business administration, accounting, finance, computer science, and software engineering. The second batch of university students joined the university in the academic year of 2016- 2017 in the following new disciplines: pharmacy, civil engineering, architecture and engineering.</string>
    <string name="aut4">The Computer Center was established with the beginning of the university\'s establishment in 2015 to provide information and communication to the university faculties and departments on the academic and administrative levels. The center has many basic tasks in the university to serve the academic and administrative staff and students. The center works on the operation and development of the university systems and networks.</string>
    <string name="aut5">The Public Relations Department is the linking chain between the faculties of the University, its units and its departments on one hand, and between the university and the outside community on the other hand. The department undertakes managing the internal and external communication channels and organizing various activities of the university. The department is working to achieve the good reputation of the University and to clarify its mission, objectives, philosophy, and its activities, and strengthening the university relationship with local and foreign institutions through programs and mutual visits. The department is also responsible for holding conferences as well as exhibitions, and it is responsible for participating in various fields. In addition, the department undertakes the responsibility of a set of tasks and duties such as coordination and communication with the media and the press, and supervising the publication of university news. The department undertakes the responsibility of organizing news archives and the publications of the Ministry of Higher Education. Moreover, the department prepares organizing official delegations and guests of the university visits, and issuing brochures of the university. It also works in coordination with colleges and the Deanship of Students Affairs to organize celebrations, meetings and activities.</string>
    <string name="semester_cal">To calculate the semester average, you must multiply each mark in the subject and the number of hours, then collect the signs and divide them by the number of semester hours</string>
    <string name="calculate">Calculate</string>
    <string name="read_moree">read more</string>
    <string name="read_lesss">read less</string>
    <string name="number_of_room">Enter number of room and description</string>
    <string name="semester_average">Semester average</string>
    <string name="semester_hours">Semester hours</string>
    <string name="previous_gpa">previous GPA</string>
    <string name="hours_in_previous_gpa">hours in previous GPA</string>
    <string name="calculate_the_semester_average">Calculate the semester average</string>
    <string name="name">Name</string>
    <string name="national_number_passport">National number/passport</string>
    <string name="place_of_birth">place of birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sex">Sex</string>
    <string name="nationality">Nationality</string>
    <string name="phone">Phone</string>
    <string name="school">School</string>
    <string name="average">average</string>
    <string name="branch">branch</string>
    <string name="certificate_y">Certificate Y</string>
    <string name="country_of_issue">Country of Issue</string>
    <string name="submit">Submit</string>
    <string name="request_send">you request send</string>
    <string name="some_empty">Some fields empty</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="code_4_aut">Code 4 AUT</string>
    <string name="website">University website</string>
    <string name="student_gate">Student gate</string>
    <string name="very_important_website">very important website</string>
    <string name="app_name" translatable="false">Code 4 AUT</string>
    <string name="social_media">Social media</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instgram">Instgram</string>
    <string name="phone_and_email">Phone and Email</string>
    <string name="pass">A message will be sent to your inbox containing the new password or directly contact the administrator.</string>
    <string name="upload_done">uploading has been done</string>
    <string name="zero_or_less">You entered a value of zero or less</string>
    <string name="reset_pass">Reset Password ?</string>
    <string name="enter_email">Enter Your Email To Received Reset Link.</string>
    <string name="reset_sent">Reset Link Sent To Your Email.</string>
    <string name="reset_not_sent">Error ! Reset Link is Not Sent</string>
</resources>
