<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent"
    android:background="@drawable/main_activity"
    tools:context=".Activity.RegestristionForm">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="10">


                <EditText
                    android:id="@+id/Vname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_background"
                    android:hint="@string/name"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/Vnumber"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_background"
                    android:hint="@string/national_number_passport"
                    android:inputType="number"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/VplaceOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_background"
                        android:hint="@string/place_of_birth"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/VDateOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_background"
                        android:hint="@string/date_of_birth"
                        android:inputType="date"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/Vsex"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_background"
                        android:hint="@string/sex"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/Vnatonality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_background"
                        android:hint="@string/nationality"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/Vphone"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_background"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/Vemail"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/Vsecondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_background"
                        android:hint="@string/branch"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/Vavareg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_background"
                        android:hint="@string/average"
                        android:inputType="number"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:id="@+id/Vyear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner_background"
                        android:hint="@string/certificate_y"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/Vschool"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_background"
                    android:hint="@string/school"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/Vcountry"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_background"
                    android:hint="@string/country_of_issue"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <Button
                    android:id="@+id/Vsubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_background"
                    android:text="@string/submit"
                    android:textAllCaps="false" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="10dp"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_form" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:text="@string/registration_form"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.175" />


</androidx.constraintlayout.widget.ConstraintLayout>



