<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_weight="4"
            android:src="@drawable/ic_login"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="?actionBarSize"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/email"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />
        <EditText
            android:id="@+id/password"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textAlignment="viewStart"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />
        <Button
            android:id="@+id/login"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/round_corner_buttom"
            android:text="@string/login"
            android:textColor="#777"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="35dp" />
        <TextView
            android:id="@+id/forget_pass"
            android:layout_marginTop="20dp"
            android:textColor="#fff"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>




</RelativeLayout>